Добавлены файлы класса Message. Исправлен main

--- a/CoSimpleChat/CoSimpleChat.vcxproj.filters
+++ b/CoSimpleChat/CoSimpleChat.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="User.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Message.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="User.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Message.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
