--- a/CoSimpleChat/CoSimpleChat.vcxproj.filters
+++ b/CoSimpleChat/CoSimpleChat.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Message.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="CounterMessages.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="User.h">
