--- a/CoSimpleChat/CoSimpleChat.vcxproj
+++ b/CoSimpleChat/CoSimpleChat.vcxproj
@@ -145,6 +145,7 @@
     <ClCompile Include="User.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CounterMessages.h" />
     <ClInclude Include="Message.h" />
     <ClInclude Include="User.h" />
   </ItemGroup>
