--- a/CoSimpleChat/CoSimpleChat.vcxproj.filters
+++ b/CoSimpleChat/CoSimpleChat.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClInclude Include="Message.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="CounterMessages.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
